<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black" >

    <TextView
        android:id="@+id/Objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/obj"
        android:textSize="20sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/back"
        android:onClick="finishProcess" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Capture"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/bonus"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/Capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Objective"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="10dp"
        android:text="@string/capture"
        android:textSize="15sp" />

</RelativeLayout>